Cambiado el integervalue()